<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Navigation_Drawer.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_action"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_About"
        android:title="@string/action_aboutUs"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Code"
        android:title="@string/action_codeOfConduct"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signOut"
        android:title="@string/action_SignOut"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>