<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.pc.run.EditProfile"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="30dp"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileFrag_Known" />

        <com.example.pc.run.Adapters.MultiSelectionSpinner
            android:id="@+id/langKnownSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">
        </com.example.pc.run.Adapters.MultiSelectionSpinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileFrag_Learning"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp" />

        <com.example.pc.run.Adapters.MultiSelectionSpinner
            android:id="@+id/langLearningSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">
        </com.example.pc.run.Adapters.MultiSelectionSpinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileFrag_Interests"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/editInterests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:onClick="changeAuth"
            android:layout_weight="4"
            android:layout_marginBottom="30dp"/>


        <Button
            android:id="@+id/saveProfileBtn"
            android:onClick="saveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="@color/buttonA"
            android:text="save"/>



    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
